<resources>
    <string name="app_name">CustomTextView</string>

    <string name="font_calculus_sans">Calculus_Sans.ttf</string>
    <string name="font_roboto_regular">Roboto_Regular.ttf</string>

    <string name="roboto_regular">Roboto Regular MakeThisSpecificPartColored</string>

    <string name="themed_text">Themed Text MakeThisSpecificPartBold</string>

    <string name="calculus_sans">Calculus Sans MakeThisSpecificPartBoldAndColored</string>
</resources>
